--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="#" id="dis">25% Off Hurry!!</a>
       </div>
       <div id="Pizza">
-        <img src="/images/pizza3.png" width="100" />
-        <img src="/images/pizza3.png" width="100" />
-        <img src=" /images/pizza3.png" width="100" />
+        <img src="./images/pizza3.png" width="100" />
+        <img src="./images/pizza3.png" width="100" />
+        <img src="./images/pizza3.png" width="100" />
       </div>
     </header>
   </body>
